fix headerのz-indexを変更して常に一番上に表示されるようにした

--- a/app/_components/Header/NavItem.module.css
+++ b/app/_components/Header/NavItem.module.css
@@ -13,6 +13,7 @@
     position: relative;
     padding: 0 0 0 30px;
     border-bottom: solid 2px #3b3b3b;
+    z-index: 10;
 }
 
 .navitems::before {
