--- a/app/_components/Header/togglebutton.module.css
+++ b/app/_components/Header/togglebutton.module.css
@@ -4,6 +4,7 @@
     width: 100px;
     height: 70px;
     margin: 30px;
+    z-index: 10;
 }
 
 .togglebutton span {
