--- a/app/profile/profile.module.css
+++ b/app/profile/profile.module.css
@@ -23,7 +23,7 @@
 .maintext {
     font-size: 2rem;
     width: 50vw;
-    height: 25vw;
+    height: 30vw;
     padding: 1rem;
     overflow: scroll;
     background: rgb(0,0,0);
